# ChangeLog for app-editors/conglomerate
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/conglomerate/Attic/ChangeLog,v 1.4 2003/11/28 22:42:57 lu_zero Exp $

  28 Nov 2003; Luca Barbato <lu_zero@gentoo.org> conglomerate-0.7.6.ebuild:
  Marked ~ppc

*conglomerate-0.7.6 (07 Nov 2003)

  07 Nov 2003; Alastair Tse <liquidx@gentoo.org> conglomerate-0.7.6.ebuild:
  version bump

*conglomerate-0.7.5 (08 Oct 2003)

  08 Oct 2003; foser <foser@gentoo.org> conglomerate-0.7.5.ebuild :
  New version, add doc USE for gtk-doc

*conglomerate-0.7.4 (28 Sep 2003)

  28 Sep 2003; foser <foser@gentoo.org> conglomerate-0.7.4.ebuild, metadata.xml, ChangeLog :
  Initial commit as requested in (#27666)
  XML editor for GNOME, added to the gnome herd