@@ -1,8 +1,6 @@
-MD5 31c39062f684ecaabdef34267d0276ca conglomerate-0.7.6.ebuild 753
-MD5 a81d8bae5069c7fc1b0ae66d21536641 ChangeLog 810
+MD5 09daa86767b6990c5cacd47a5c5802ed ChangeLog 1033
+MD5 e33ff881c3b7ef85233d371f82c504b0 conglomerate-0.7.11.ebuild 754
+MD5 69ade4338ad75332faf777b5f7c1c468 conglomerate-0.7.6.ebuild 752
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
-MD5 1ebe6dcb794045851b7ccc73c2f39edb conglomerate-0.7.4.ebuild 710
-MD5 8f619070f6273a39e96b40984a822bee conglomerate-0.7.5.ebuild 746
-MD5 429b9771966bcc22c5a4fc0af8b1cbde files/digest-conglomerate-0.7.5 71
-MD5 285491e6db7fe80daaca46fceaf7abb2 files/digest-conglomerate-0.7.4 70
+MD5 ca4bf14acc138133a52ec9e6e928df7c files/digest-conglomerate-0.7.11 72
 MD5 8e52ee09f46fb63615d44da7e9759b5f files/digest-conglomerate-0.7.6 71
