@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/conglomerate/Attic/conglomerate-0.7.4.ebuild,v 1.2 2003/10/08 21:41:39 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/conglomerate/Attic/conglomerate-0.7.11.ebuild,v 1.1 2004/02/04 16:36:52 liquidx Exp $
 
 inherit gnome2
 
@@ -11,8 +11,8 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 LICENSE="GPL-2"
 
 SLOT="0"
-KEYWORDS="x86"
-IUSE=""
+KEYWORDS="~x86 ~ppc"
+IUSE="doc"
 
 RDEPEND="dev-libs/libxml2
 	dev-libs/libxslt
@@ -23,7 +23,7 @@ RDEPEND="dev-libs/libxml2
 	>=x11-libs/gtksourceview-0.6"
 
 DEPEND="${RDEPEND}
-	dev-util/pkgconfig"
+	dev-util/pkgconfig
+	doc? ( >=dev-util/gtk-doc-0.6 )"
 
 DOCS="AUTHORS BUGS COPYING ChangeLog INSTALL NEWS README* TODO"
-
